<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSession"
>

    <!--________________Zone d'identification surveillant nuit________________________-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:background="@drawable/custom_login_page">

        <EditText
            android:id="@+id/identification_zone_ack_id"

            style="@style/DefaultNotificationTextStyle"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:hint="@string/ack_page_supervisor_id"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:background="@drawable/custom_confirmation_ack_background"/>

        <EditText
            android:id="@+id/identification_zone_ack_password"

            style="@style/DefaultNotificationTextStyle"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:hint="@string/ack_page_supervisor_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@drawable/custom_confirmation_ack_background"/>

        <Button
            android:id="@+id/identification_zone_ack_id_button"

            style="@style/DefaultListTextStyle"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/darkPurple"
            android:text="@string/ack_page_supervisor_connect" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/application_logo"
            android:background="@drawable/custom_confirmation_ack_background"

            android:src="@drawable/logomedical_iot" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>